--- a/Bio Medic.html
+++ b/Bio Medic.html
@@ -203,16 +203,28 @@
             <div class="card-icon">⏳</div>
         </a>
         
-            <a href="bio clock simulation.html" class="card matrix">
+            <a href="Tips Makan Sehat Rekomendasi Ksatria Nuswantara.html" class="card matrix">
             <div class="card-header">
-                <div class="card-title">Bio Clock Simulation</div>
-                <div class="card-freq">SIMULASI</div>
+                <div class="card-title">Nuswantara Nutri-Guard</div>
+                <div class="card-freq">REKOMENDASI</div>
             </div>
             <div class="card-desc">
-                Simulator percepatan waktu biologis.
+                Tips Makan/Jajan Sehat sesuai fungsi tubuh, anti Kontradiksi Fungsi Organ.
             </div>
-            <div class="card-status">>> OVERRIDE SYSTEM</div>
+            <div class="card-status">>> TIPS KESEHATAN</div>
             <div class="card-icon">⏳</div>
+        </a>
+
+            <a href="Jangkar Rutinitas Wajib Sesuai Wanci.html" class="card bio">
+            <div class="card-header">
+                <div class="card-title">ROUTINE KEEPER</div>
+                <div class="card-freq">ANCHOR</div>
+            </div>
+            <div class="card-desc">
+                Jadwal kegiatan utama penunjang organ. Kapan harus minum, makan, olahraga, dan istirahat. Sisanya bebas.
+            </div>
+            <div class="card-status">>> CHECK ROUTINE</div>
+            <div class="card-icon">⚓</div>
         </a>
 
         <a href="logoff matrix.html" class="card matrix">
@@ -249,4 +261,5 @@
     </footer>
 
 </body>
+
 </html>
