--- a/Bio Medic.html
+++ b/Bio Medic.html
@@ -202,6 +202,18 @@
             <div class="card-status">>> OVERRIDE SYSTEM</div>
             <div class="card-icon">⏳</div>
         </a>
+
+            <a href="bio clock simulation.html" class="card matrix">
+            <div class="card-header">
+                <div class="card-title">Bio Clock Simulation</div>
+                <div class="card-freq">SIMULASI</div>
+            </div>
+            <div class="card-desc">
+                Simulator percepatan waktu biologis.
+            </div>
+            <div class="card-status">>> OVERRIDE SYSTEM</div>
+            <div class="card-icon">⏳</div>
+        </a>
         
             <a href="Tips Makan Sehat Rekomendasi Ksatria Nuswantara.html" class="card matrix">
             <div class="card-header">
@@ -263,3 +275,4 @@
 </body>
 
 </html>
+
