--- a/Bio Medic.html
+++ b/Bio Medic.html
@@ -215,7 +215,7 @@
             <div class="card-icon">⏳</div>
         </a>
         
-            <a href="Tips Makan Sehat Rekomendasi Ksatria Nuswantara.html" class="card matrix">
+            <a href="Tips Makan Sehat Rekomendasi Ksatria Nuswantara.html" class="card bio">
             <div class="card-header">
                 <div class="card-title">Nuswantara Nutri-Guard</div>
                 <div class="card-freq">REKOMENDASI</div>
@@ -275,4 +275,5 @@
 </body>
 
 </html>
+
 
