--- a/Bio Medic.html
+++ b/Bio Medic.html
@@ -224,7 +224,7 @@
                 Tips Makan/Jajan Sehat sesuai fungsi tubuh, anti Kontradiksi Fungsi Organ.
             </div>
             <div class="card-status">>> TIPS KESEHATAN</div>
-            <div class="card-icon">⏳</div>
+            <div class="card-icon">✚</div>
         </a>
 
             <a href="Jangkar Rutinitas Wajib Sesuai Wanci.html" class="card bio">
@@ -275,5 +275,6 @@
 </body>
 
 </html>
+
 
 
