Update Jam Tubuh dan Fungsi Biologis.html

--- a/Jam Tubuh dan Fungsi Biologis.html
+++ b/Jam Tubuh dan Fungsi Biologis.html
@@ -269,7 +269,7 @@
           
         { start: 17, end: 19, name: "GINJAL", action: "STORAGE", 
           advice: "Ginjal menyimpan energi inti. Makan malam ringan, mulai kurangi aktivitas.", 
-          forbid: "JANGAN: Kerja lembur berlebihan, seks berlebihan.", theme: "danger" },
+          forbid: "JANGAN: Kerja lembur berlebihan, Harmony berlebihan.", theme: "danger" },
           
         { start: 19, end: 21, name: "PERICARDIUM", action: "PROTECTION", 
           advice: "Selaput jantung aktif. Waktu keluarga, baca buku, relaksasi (Mode Santai).", 
@@ -366,4 +366,5 @@
     update();
 </script>
 </body>
+
 </html>
